methods.flowerpot.FlowerPot.scala.code
def coin(c:Color) {
  setCouleurBrosse(c)
  while(!(estDosMur())) {gauche()}
  for ( compteur <- 1 to 4) { baisseBrosse(); leveBrosse(); avance(); droite(); avance(); droite(); droite()}
  avance(); setCouleurBrosse(Color.YELLOW); baisseBrosse(); leveBrosse(); avance(); avance(); avance(); avance(); gauche(); avance()
}

def carre() {coin(Color.RED);coin(Color.CYAN);coin(Color.GREEN);coin(Color.PINK)}


override def run() {
  carre()
  avance(); avance(); avance(); droite(); avance()
  for ( compteur <- 1 to 4) { baisseBrosse(); leveBrosse(); avance(); droite(); avance(); droite(); droite()}
  avance(); setCouleurBrosse(Color.YELLOW); baisseBrosse(); leveBrosse()
  avance(); avance(); droite(); avance(); avance(); avance(); droite(); droite()
  
}